force-app/main/default/objects/ADM_Priority_Mapping__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Frequency</label>
    <referenceTo>ADM_Frequency__c</referenceTo>
    <relationshipName>Severity_Matries</relationshipName>
    <type>Lookup</type>
</CustomField>