force-app/main/default/objects/ADM_Priority_Mapping__c/fields/Impact__c.field-meta.xml
<CustomField>
    <fullName>Impact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Impact</label>
    <referenceTo>ADM_Impact__c</referenceTo>
    <relationshipName>Severity_Matries</relationshipName>
    <type>Lookup</type>
</CustomField>