force-app/main/default/objects/ADM_Priority_Mapping__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Priority</label>
    <referenceTo>ADM_Priority__c</referenceTo>
    <relationshipLabel>Priority Mapping</relationshipLabel>
    <relationshipName>Priority_Mapping</relationshipName>
    <type>Lookup</type>
</CustomField>